--- a/app/views/users/upload_profile_picture.js.erb
+++ b/app/views/users/upload_profile_picture.js.erb
@@ -1,1 +1,1 @@
-$("#dUploader").trigger("uploadComplete", ["<%= @filename %>", <%= @size[0] %>, <%= @size[1] %>]);
+$("#upload-pic").trigger("uploadComplete", ["<%= @filename %>", <%= @size[0] %>, <%= @size[1] %>]);
