--- a/app/views/activities/_status_posted.html.erb
+++ b/app/views/activities/_status_posted.html.erb
@@ -1,6 +1,6 @@
 <% status_user = subject.user %>
 
-<div class="feed-item feed-item-status box">
+<div class="feed-item feed-item-status box" id="feed-item-<%= subject.id %>">
 	<%= link_to image_tag("/profile_pictures/thumbs/#{status_user.get_profile_picture}", class: 'feed-item-user-icon'), status_user %>
 	<div class="feed-item-container">
 		<h5><%= link_to status_user.full_name, status_user %></h5>
@@ -26,24 +26,22 @@
 
 		<%= simple_form_for([subject, @status_comment], html: { role: "form", class: 'feed-comment-form' }) do |f| %>
 
-			<ul class="feed-item-status-comments-list">
-				<% subject.status_comments.each do |comment| %>
+			<%
+				#TODO: refactor all this using angular
+				@comments = subject.status_comments.page(1).per(StatusComment::COMMENTS_PER_PAGE)
+				@comments = @comments.sort_by &:created_at
+				@total_comments = subject.status_comments.count
+			%>
+			<ul class="feed-item-status-comments-list" data-showing="<%= @comments.count %>" data-total="<%= @total_comments %>">
+				<% if @comments.count < @total_comments %>
 					<li>
-						<%= link_to image_tag("/profile_pictures/thumbs/#{comment.user.get_profile_picture}", class: 'feed-item-comment-user-icon'), comment.user %>
-						<div class="feed-item-comment-content">
-							<%= link_to comment.user.full_name, comment.user %>
-							<span class="feed-item-comment-body"><%= comment.message %></span>
-
-							<br/>
-							<span class="timestamp"><i class="fa fa-clock-o"></i> <%= time_ago_in_words(comment.created_at) %></span>
-							<% if current_user?(comment.user) %>
-								&nbsp;&nbsp;<span class="timestamp"><i class="fa fa-trash-o"></i> 
-								<%= link_to "Delete", status_status_comment_path(subject, comment), method: :delete, :confirm => "Are you sure you want to delete this comment?", class: "btn-remove-comment text-muted" %>
-								</span>
-							<% end %>
-						</div>
+						<%= link_to "Show previous comments", status_status_comments_path(status_id: subject.id, from: @comments.first.id), class: "load-previous-comments", remote: true %>
+						<span class="comments-counter">(<%= @comments.count %> of <%= @total_comments %>)</span>
 					</li>
 				<% end %>
+
+				<%= render :partial => 'shared/feed_status_comments', :locals => { :comments => @comments, :subject => subject } %>
+
 				<li>
 					<%= image_tag("/profile_pictures/thumbs/#{current_user.get_profile_picture}", class: 'feed-item-comment-user-icon') %>
 					<%= f.input_field :message, :required => true, as: :string, label: false, placeholder: "Write a comment...", class: 'comment_input form-control' %>
