--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,9 @@
 
     <title><%= content_for?(:title) ? yield(:title) : "Dent Group" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Drs" %>">
+    
+    <link rel="apple-touch-icon-precomposed" href="/favicon-152.png">
+    <link rel="icon" href="/favicon-152.png" sizes="152x152">
 
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
