--- a/app/assets/stylesheets/landingpage2.css.scss
+++ b/app/assets/stylesheets/landingpage2.css.scss
@@ -569,7 +569,7 @@ section .btn {
 }
 
 .fullscreen-img {
-	background-image: image-url('lp2_home_bg.png');
+	background-image: asset-url('lp2_home_bg.png');
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
 	width: 100%;
