--- a/app/assets/stylesheets/suppliers.css.scss
+++ b/app/assets/stylesheets/suppliers.css.scss
@@ -160,7 +160,7 @@
 	line-height: 21px;
 	padding-left: 18px;
 	margin-left: 10px;
-	background-image: url("/assets/article.svg");
+	background-image: asset-url("article.svg");
 	background-repeat: no-repeat;
 	background-position: center left;
 
