--- a/app/views/layouts/landingpage2.html.erb
+++ b/app/views/layouts/landingpage2.html.erb
@@ -100,7 +100,7 @@
           </div>
           <div class="navbar-header">
             <a class="navbar-brand scrollTo" href="#home">
-              <img src="/assets/logo.png" alt="Logo" />
+              <%= image_tag 'logo.png' %>
             </a>
           </div>
 
