--- a/app/assets/stylesheets/jquery.Jcrop.css.scss
+++ b/app/assets/stylesheets/jquery.Jcrop.css.scss
@@ -15,7 +15,7 @@
 /* Selection Border */
 .jcrop-vline,
 .jcrop-hline {
-  background: #ffffff url("/assets/Jcrop.gif");
+  background: #ffffff asset-url("Jcrop.gif");
   font-size: 0;
   position: absolute;
 }
