--- a/app/assets/stylesheets/news.css.scss
+++ b/app/assets/stylesheets/news.css.scss
@@ -32,3 +32,13 @@
 		}
 	}
 }
+
+.news-thumb-image {
+	padding: 5px 10px 10px 0;
+}
+
+#loadMoreContainer {
+	text-align: center;
+	padding: 6px 0;
+	margin-top: 10px;
+}
