--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -23,7 +23,7 @@
       <%= f.input :skype, label: 'Skype' %>
       <%= f.input :yahoo, label: 'Yahoo! ID' %>
 
-      <%= f.button :submit, "Save", class: "btn btn-primary btn-dark" %>
+      <%= f.button :submit, "Save", class: "btn btn-green" %>
     <% end %>
 
     <h4 class="hl bottom-15">Change password</h4>
@@ -35,7 +35,7 @@
       <%= f.input :password, :required => false, label: 'New password' %>
       <%= f.input :confirm_password, :required => false, label: 'Confirm password' %>
 
-      <%= f.button :submit, "Change password", class: "btn btn-primary btn-dark" %>
+      <%= f.button :submit, "Change password", class: "btn btn-green" %>
     <% end %>
   </div>
 
