--- a/app/views/bad_customers/edit.html.erb
+++ b/app/views/bad_customers/edit.html.erb
@@ -1,18 +1,24 @@
-<div class="box jobs-box">
-	<h1>Edit reported customer</h1>
-	<%= simple_form_for(@customer, html: { role: "form", id: 'addCustomerForm' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
+<% content_for :page_location, "Blacklist" %>
 
-		<%= f.error_notification %>
-		<div class="form-inputs">
-			<%= f.input :name, :required => true, label: 'Name' %>
-			<%= f.input :cnp, :required => true, label: 'CNP', input_html: { maxlength: '4' }, hint: 'Last 4 digits' %>
+<div class="row">
+	<div class="col-sm-12 customers-box">
+		<h2 class="hl top-zero">Edit reported customer</h2>
+		<hr/>
 
-			<%= f.input :message, :required => true, label: 'Reason' %>
-		</div>
+		<%= simple_form_for(@customer, html: { role: "form", id: 'addCustomerForm' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
 
-		<br/>
-        <%= f.button :submit, "Post", class: "btn btn-primary" %>
-        <%= link_to "Cancel", bad_customer_path(@customer), class: "btn btn-warning" %>
-        <%= link_to "Delete", bad_customer_path(@customer), method: :delete, :confirm => "Are you sure you want to delete this report?", class: "btn btn-danger" %>
-	<% end %>
+			<%= f.error_notification %>
+			<div class="form-inputs">
+				<%= f.input :name, :required => true, label: 'Name' %>
+				<%= f.input :cnp, :required => true, label: 'CNP', input_html: { maxlength: '4' }, hint: 'Last 4 digits' %>
+
+				<%= f.input :message, :required => true, label: 'Reason' %>
+			</div>
+
+			<br/>
+	        <%= f.button :submit, "Post", class: "btn btn-green" %>
+	        <%= link_to "Cancel", bad_customer_path(@customer), class: "btn btn-warning" %>
+	        <%= link_to "Delete", bad_customer_path(@customer), method: :delete, :confirm => "Are you sure you want to delete this report?", class: "btn btn-danger" %>
+		<% end %>
+	</div>
 </div>
