--- a/app/views/bad_customers/new.html.erb
+++ b/app/views/bad_customers/new.html.erb
@@ -1,16 +1,22 @@
-<div class="box jobs-box">
-	<h1>Report customer</h1>
-	<%= simple_form_for(@customer, url: bad_customers_path, html: { role: "form", id: 'addCustomerForm' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
+<% content_for :page_location, "Blacklist" %>
 
-		<%= f.error_notification %>
-		<div class="form-inputs">
-			<%= f.input :name, :required => true, label: 'Name' %>
-			<%= f.input :cnp, :required => true, label: 'CNP', input_html: { maxlength: '4' }, hint: 'Last 4 digits' %>
+<div class="row">
+	<div class="col-sm-12 customers-box">
+		<h2 class="hl top-zero">Report customer</h2>
+		<hr/>
 
-			<%= f.input :message, :required => true, label: 'Reason' %>
-		</div>
+		<%= simple_form_for(@customer, url: bad_customers_path, html: { role: "form", id: 'addCustomerForm' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
 
-		<br/>
-        <%= f.button :submit, "Post", class: "btn btn-primary" %>
-	<% end %>
+			<%= f.error_notification %>
+			<div class="form-inputs">
+				<%= f.input :name, :required => true, label: 'Name' %>
+				<%= f.input :cnp, :required => true, label: 'CNP', input_html: { maxlength: '4' }, hint: 'Last 4 digits' %>
+
+				<%= f.input :message, :required => true, label: 'Reason' %>
+			</div>
+
+			<br/>
+	        <%= f.button :submit, "Post", class: "btn btn-green" %>
+		<% end %>
+	</div>
 </div>
