--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -4,9 +4,9 @@
 	<div class="col-sm-8">
 		<h4><a href="<%= news_path(@news) %>"><%= @news.title %></a></h4>
 		<ul class="text-muted list-inline">
-			<li><i class="fa fa-user"></i> <a href="#">Administrator</a></li>
+			<li><i class="fa fa-user"></i> <%= link_to @news.user.full_name, @news.user %></li>
 			<li><i class="fa fa-calendar"></i> <%= @news.published_at.to_formatted_s(:news) %></li>
-			<li><i class="fa fa-comments-o"></i> 21 comments</li>
+			<li><i class="fa fa-comments-o"></i> <%= pluralize(@news.comments_count, 'comment') %></li>
 			<li><i class="fa fa-edit"></i> <%= link_to "Edit", edit_news_path(@news), class: "text-muted" %></li>
 		</ul>
 		<hr>
@@ -15,58 +15,45 @@
 		</p>
 	
 		<div class="new-comment">
-			<form class="form-horizontal" role="form">
+			<%= simple_form_for([@news, @comment], html: { role: "form", id: 'addCommentForm', class: 'form-horizontal' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
+
+				<%= f.error_notification %>
+
 				<div class="form-group">
-					<div class="col-sm-2 hidden-xs">
-						<img src="img/face1.jpg" alt="..." class="img-responsive">
+					<div class="col-sm-2">
+						<%= image_tag "/profile_pictures/#{current_user.get_profile_picture}", class: "img-responsive" %>
 					</div>
 					<div class="col-sm-10">
-						<textarea class="form-control" rows="3" placeholder="Leave a message..."></textarea>
+						<%= f.input_field :body, :required => true, placeholder: "Your comment...", rows: "3" %>
 					</div>
 				</div>
 				<div class="form-group">
 					<div class="col-sm-offset-2 col-sm-10">
-						<button type="submit" class="btn btn-dark btn-sm">Post comment</button>
+						<%= f.button :submit, "Post comment", class: "btn btn-green" %>
 					</div>
 				</div>
-			</form>
+			<% end %>
 		</div>
 
-	  <h4>21 comments</h4>
-	  <hr>
-	  <div class="comment">
-	    <div class="media">
-	      <a class="pull-left" href="#">
-	        <img class="media-object" src="img/face2.jpg" alt="...">
-	      </a>
-	      <div class="media-body">
-	        <p><a href="profile.html">Username</a></p>
-	        <p>
-	          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc consectetur urna at neque mollis sagittis. Vivamus viverra justo in dui vulputate tincidunt in eu magna. Ut ut risus pretium, varius felis a, congue metus.
-	        </p>
-	        <ul class="text-muted list-inline">
-	          <li><i class="fa fa-clock-o"></i> 20 minutes ago</li>
-	          <li><i class="fa fa-cog"></i> <a href="#">Edit</a></li>
-	        </ul>
-	      </div>
-	    </div>
-	  </div>
-	  <div class="comment">
-	    <div class="media">
-	      <a class="pull-left" href="#">
-	        <img class="media-object" src="img/face3.jpg" alt="...">
-	      </a>
-	      <div class="media-body">
-	        <p><a href="profile.html">Username 2</a></p>
-	        <p>
-	          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc consectetur urna at neque mollis sagittis. Vivamus viverra justo in dui vulputate tincidunt in eu magna. Ut ut risus pretium, varius felis a, congue metus.
-	        </p>
-	        <ul class="text-muted list-inline">
-	          <li><i class="fa fa-clock-o"></i> 1 hour ago</li>
-	          <li><i class="fa fa-cog"></i> <a href="#">Edit</a></li>
-	        </ul>
-	      </div>
-	    </div>
-	  </div>
+		<h4><%= pluralize(@news.comments_count, 'comment') %></h4>
+		<hr>
+
+		<% @comments.each do |comment| %>
+		<div class="comment">
+			<div class="media">
+				<%= link_to image_tag("/profile_pictures/#{comment.user.get_profile_picture}", class: "media-object"), comment.user, class: "pull-left" %>
+				<div class="media-body">
+					<p><%= link_to comment.user.full_name, comment.user %></p>
+					<p><%= comment.body %></p>
+					<ul class="text-muted list-inline">
+						<li><i class="fa fa-clock-o"></i> <%= time_ago_in_words(comment.created_at) %></li>
+						<% if current_user?(comment.user) %>
+							<li><i class="fa fa-cog"></i> <%= link_to 'Delete', news_news_comments_path(comment), method: :delete, :confirm => "Are you sure you want to delete this comment?" %></li>
+						<% end %>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<% end %>
   </div>
 </div>
