--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,20 +1,24 @@
 <% content_for :page_location, "Offers" %>
 
-<div class="box offers-box">
-	<h1>Offers</h1>
-	<%= link_to 'Add new offer', new_offer_path %>
-	<br/>
+<div class="row">
+	<div class="col-sm-12 offers-box">
+		<h2 class="hl top-zero">Offers</h2>
+		<hr/>
 
-	<%= paginate @offers %>
-	
-	<ul class="offers-list">
-		<% @offers.each do |offer| %>
-			<li class="offer-item">
-				<a href="<%= offer_path(offer) %>"><h4><%= offer.title %></h4></a>
-				<span class="offer-item-time">Posted <i><%= time_ago_in_words(offer.created_at) %></i> ago by <%= link_to current_user.full_name, user_path(current_user) %></span>
+		<%= link_to 'Add new offer', new_offer_path %>
+		<br/>
 
-				<p class="offer-item-summary"><%= offer.summary %></p>
-			</li>
-		<% end %>
-	</ul>
+		<%= paginate @offers %>
+		
+		<ul class="offers-list">
+			<% @offers.each do |offer| %>
+				<li class="offer-item">
+					<a href="<%= offer_path(offer) %>"><h4><%= offer.title %></h4></a>
+					<span class="offer-item-time">Posted <i><%= time_ago_in_words(offer.created_at) %></i> ago by <%= link_to current_user.full_name, user_path(current_user) %></span>
+
+					<p class="offer-item-summary"><%= offer.summary %></p>
+				</li>
+			<% end %>
+		</ul>
+	</div>
 </div>
