--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -1,20 +1,24 @@
 <% content_for :page_location, "Offers" %>
 
-<div class="box offers-box">
-	<h1>Add new offer</h1>
-	<%= simple_form_for(@offer, url: offers_path, html: { role: "form", id: 'addOfferForm' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
+<div class="row">
+	<div class="col-sm-12 offers-box">
+		<h2 class="hl top-zero">Add new offer</h2>
+		<hr/>
 
-		<%= f.error_notification %>
-		<div class="form-inputs">
-			<%= f.input :type, collection: [['Selling',1],['Buying',2],['Rental',3]], label: 'Type', include_blank: false %>
-			<%= f.input :title, :required => true, label: 'Title' %>
-			<%= f.input :summary, :required => true, label: 'Summary' %>
-			<%= f.input :body, :required => true, label: 'Description', as: :ckeditor, input_html: { ckeditor: { height: 300 } } %>
-			<%= f.input :contact_email, :required => false, label: 'Contact e-mail' %>
-			<%= f.input :contact_phone, :required => false, label: 'Contact phone' %>
-		</div>
+		<%= simple_form_for(@offer, url: offers_path, html: { role: "form", id: 'addOfferForm' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
 
-		<br/>
-        <%= f.button :submit, "Post", class: "btn btn-primary" %>
-	<% end %>
+			<%= f.error_notification %>
+			<div class="form-inputs">
+				<%= f.input :type, collection: [['Selling',1],['Buying',2],['Rental',3]], label: 'Type', include_blank: false %>
+				<%= f.input :title, :required => true, label: 'Title' %>
+				<%= f.input :summary, :required => true, label: 'Summary' %>
+				<%= f.input :body, :required => true, label: 'Description', as: :ckeditor, input_html: { ckeditor: { height: 300 } } %>
+				<%= f.input :contact_email, :required => false, label: 'Contact e-mail' %>
+				<%= f.input :contact_phone, :required => false, label: 'Contact phone' %>
+			</div>
+
+			<br/>
+	        <%= f.button :submit, "Post", class: "btn btn-green" %>
+		<% end %>
+	</div>
 </div>
