--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -1,31 +1,34 @@
 <% content_for :page_location, "Suppliers" %>
 
-<div class="box supplier-box">
-	<div class="supplier-name">
-		<h1><%= @supplier.name %></h1>
+<div class="row">
+	<div class="col-sm-12 supplier-box">
+		<h2 class="hl top-zero"><%= @supplier.name %></h2>
+		<hr/>
+
 		<h5><span><%= "#{@supplier.city}, #{@supplier.country}" %></span></h5>
-	</div>
-	<div class="supplier-links">
-		<%= link_to 'Edit', edit_supplier_path(@country, @supplier), class: 'btn btn-primary btn-sm' %>
-	</div>
 
-	<hr/>
+		<div class="supplier-links">
+			<%= link_to 'Edit', edit_supplier_path(@country, @supplier), class: 'btn btn-primary btn-sm' %>
+		</div>
 
-	<div class="supplier-info">
-		<ul>
-			<li>E-mail: <span><%= @supplier.email %></span></li>
-			<li>Phone: <span><%= @supplier.phone %></span></li>
-			<li>Address: <span><%= @supplier.address %></span></li>
-		</ul>
-		<ul>
-			<li>Views: <span><%= @supplier.views %></span></li>
-			<li>Posted by: <span><%= link_to @supplier.user.full_name, user_path(@supplier.user) %></span></li>
-		</ul>
-	</div>
+		<hr/>
 
-	<hr/>
+		<div class="supplier-info">
+			<ul>
+				<li>E-mail: <span><%= @supplier.email %></span></li>
+				<li>Phone: <span><%= @supplier.phone %></span></li>
+				<li>Address: <span><%= @supplier.address %></span></li>
+			</ul>
+			<ul>
+				<li>Views: <span><%= @supplier.views %></span></li>
+				<li>Posted by: <span><%= link_to @supplier.user.full_name, user_path(@supplier.user) %></span></li>
+			</ul>
+		</div>
 
-	<div class="supplier-description">
-		<%= @supplier.description %>
+		<hr/>
+
+		<div class="supplier-description">
+			<%= @supplier.description %>
+		</div>
 	</div>
 </div>
