--- a/app/views/news/_news_thumb.html.erb
+++ b/app/views/news/_news_thumb.html.erb
@@ -1,4 +1,4 @@
-<div class="news-item">
+<div class="news-item clearfix box">
 	<a href="<%= news_path(news_thumb) %>"><h4><%= news_thumb.title %></h4></a>
 	<span class="news-item-time timestamp"><i class="fa fa-clock-o"></i> <%= time_ago_in_words(news_thumb.published_at) %></i></span>
 	<p class="news-item-summary">
