db cleaning + convert to utf8 collation tables & columns

--- a/app/views/bad_customers/index.html.erb
+++ b/app/views/bad_customers/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
 	<div class="col-sm-12 customers-box">
-		<h2 class="hl top-zero">Problem customers</h2>
+		<h2 class="hl top-zero">Blacklist</h2>
 		<hr/>
 
 		<%= link_to 'Add new job offer', new_bad_customer_path %>
