--- a/app/views/suppliers/new.html.erb
+++ b/app/views/suppliers/new.html.erb
@@ -1,22 +1,26 @@
 <% content_for :page_location, "Suppliers" %>
 
-<div class="box cuppliers-box">
-	<h1>Add new supplier</h1>
-	<%= simple_form_for(@supplier, url: suppliers_path, html: { role: "form", id: 'addSupplierForm' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
+<div class="row">
+	<div class="col-sm-12 suppliers-box">
+		<h2 class="hl top-zero">Add new supplier</h2>
+		<hr/>
 
-		<%= f.error_notification %>
-		<div class="form-inputs">
-			<%= f.input :name, :required => true, label: 'Name' %>
-			<%= f.input :email, :required => false, label: 'E-mail' %>
-			<%= f.input :phone, :required => false, label: 'Phone' %>
-			<%= f.input :website, :required => false, label: 'Website' %>
-			<%= f.input :description, :required => true, label: 'Description'  %>
-			<%= f.input :country, :required => true, label: 'Country' %>
-			<%= f.input :city, :required => true, label: 'City' %>
-			<%= f.input :address, :required => false, label: 'Address' %>
-		</div>
+		<%= simple_form_for(@supplier, url: suppliers_path, html: { role: "form", id: 'addSupplierForm' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
 
-		<br/>
-        <%= f.button :submit, "Post", class: "btn btn-primary" %>
-	<% end %>
+			<%= f.error_notification %>
+			<div class="form-inputs">
+				<%= f.input :name, :required => true, label: 'Name' %>
+				<%= f.input :email, :required => false, label: 'E-mail' %>
+				<%= f.input :phone, :required => false, label: 'Phone' %>
+				<%= f.input :website, :required => false, label: 'Website' %>
+				<%= f.input :description, :required => true, label: 'Description'  %>
+				<%= f.input :country, :required => true, label: 'Country' %>
+				<%= f.input :city, :required => true, label: 'City' %>
+				<%= f.input :address, :required => false, label: 'Address' %>
+			</div>
+
+			<br/>
+	        <%= f.button :submit, "Post", class: "btn btn-primary" %>
+		<% end %>
+	</div>
 </div>
